--- a/Mcloset.html
+++ b/Mcloset.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Margot's Closet</title>
-  <link rel="icon" type="imagem/png" href="icon-01.png" />
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="icon" type="imagem/png" href="/img/icon-01.png" />
+  <link rel="stylesheet" href="css/style.css"/>
   <meta name="description" content="Margot's Closet">
   <script src="afreme-master.js"></script>
 
@@ -36,7 +36,7 @@
   <h1 class='intro fade-in' style="font-size: 28pt; color: #F8C923"> All Summer</h1>
   <h1 class='intro fade-in' style="top: 8%; color: #416794">in a closet</h1>
   <video class="ajuste" autoplay muted>
-    <source src="armaa.mp4" type="video/mp4">
+    <source src="video/armaa.mp4" type="video/mp4">
   </video>
 
 </div>
@@ -121,20 +121,20 @@
 </div>
 
 <a-scene>
-  <a-sky src="armario-01.jpg" ></a-sky>
+  <a-sky src="/img/armario-01.jpg" ></a-sky>
 
   <a-assets>
-    <img id="play" src="play.png">
-    <img id="pause" src="pause.png">
-    <video id="animacao1" src="animation1.mp4" loop="true"></video>
-    <video id="animacao2" src="animation2.mp4" loop="true"></video>
-    <video id="animacao3" src="animation3.mp4" loop="true"></video>
-    <video id="animacao4" src="animation4.mp4" loop="true"></video>
-    <video id="animacao5" src="animation5.mp4" loop="true"></video>
-    <video id="animacao6" src="animation6.mp4" loop="true"></video>
-    <video id="animacao7" src="animation7.mp4" loop="true"></video>
-    <video id="animacao8" src="animation8.mp4" loop="true"></video>
-    <video id="animacao9" src="animation9.mp4" loop="true"></video>
+    <img id="play" src="img/play.png">
+    <img id="pause" src="/img/pause.png">
+    <video id="animacao1" src="video/animation1.mp4" loop="true"></video>
+    <video id="animacao2" src="video/animation2.mp4" loop="true"></video>
+    <video id="animacao3" src="video/animation3.mp4" loop="true"></video>
+    <video id="animacao4" src="video/animation4.mp4" loop="true"></video>
+    <video id="animacao5" src="video/animation5.mp4" loop="true"></video>
+    <video id="animacao6" src="video/animation6.mp4" loop="true"></video>
+    <video id="animacao7" src="video/animation7.mp4" loop="true"></video>
+    <video id="animacao8" src="video/animation8.mp4" loop="true"></video>
+    <video id="animacao9" src="video/animation9.mp4" loop="true"></video>
   </a-assets>
 
   <a-camera>
