--- a/Mcloset.html
+++ b/Mcloset.html
@@ -121,11 +121,11 @@
 </div>
 
 <a-scene>
-  <a-sky src="/img/armario-01.jpg" ></a-sky>
+  <a-sky src="armario-01.jpg" ></a-sky>
 
   <a-assets>
-    <img id="play" src="img/play.png">
-    <img id="pause" src="/img/pause.png">
+    <img id="play" src="play.png">
+    <img id="pause" src="pause.png">
     <video id="animacao1" src="animation1.mp4" loop="true"></video>
     <video id="animacao2" src="animation2.mp4" loop="true"></video>
     <video id="animacao3" src="animation3.mp4" loop="true"></video>
